# public/swagger.yml
@@ -16,6 +16,7 @@ security:
   - bearerAuth: []
 tags:
   - name: Auth
+  - name: Master Data
 paths:
   /auth/login:
     post:
@@ -38,11 +39,30 @@ paths:
           content:
             application/json: {}
   /auth/me:
-    post:
+    get:
       tags:
         - Auth
       summary: Me
       description: Get information about loggedin user
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+  /auth/refresh:
+    post:
+      tags:
+        - Auth
+      summary: Refresh Token
+      description: Get new token
       security:
         - bearerAuth: []
       parameters:
@@ -64,6 +84,145 @@ paths:
       security:
         - bearerAuth: []
       parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+  /master/category:
+    get:
+      tags:
+        - Master Data
+      summary: List of Category
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+          description: Pencarian terhadap data
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Urutan halaman yang ingin ditampilkan
+        - in: query
+          name: per-page
+          schema:
+            type: integer
+          description: Jumlah item per halaman
+        - in: query
+          name: sort
+          schema:
+            type: string
+          description: Urutan dari sorting data (asc/desc)
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    post:
+      tags:
+        - Master Data
+      summary: Create Category
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                name: Sepatu
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+  /master/category/{id}:
+    get:
+      tags:
+        - Master Data
+      summary: Select Specific data
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    put:
+      tags:
+        - Master Data
+      summary: Update Category
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                name: Sepatu
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    delete:
+      tags:
+        - Master Data
+      summary: Delete Category
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
         - name: Accept
           in: header
           schema:
